--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "feather-icons": "^4.29.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "lord-icon-element": "^4.0.3",
     "lottie-web": "^5.10.2",
     "react": "^18.2.0",
